fixed spacing again

--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -16,7 +16,6 @@ h4 {
     color: #848B82;
     font-weight: 200;
     font-size: 16px;
-    padding-top: 10px;
 }
 
 .bold {
